name: libpng
version: 0.0.1
license: GPL-3
license-file: COPYING
copyright: (c) Frank Waterret
author: Frank Waterret
maintainer: Frank Waterret <waterret@gmail.com>
bug-reports: mailto:waterret@gmail.com
stability: unstable
homepage: https://github.com/waterret/LibPNG-haskell
synopsis: A wrapper around libpng for haskell.
category: Console, Text
cabal-version: >= 1.6
build-type: Simple

Description:
  A wrapper around libpng for haskell. Basic read and write functions
  have been implemented. Capable to produce and read RGBA png files.

source-repository head
  type:     git
  location: git://github.com/waterret/LibPNG-haskell.git

flag threaded
  default: False

library
  exposed-modules: Codec.Image.LibPNG
  hs-source-dirs: src
  extra-libraries: png
  build-depends: base >= 4.2 && < 5
  ghc-options: -Wall -O2
  if flag(threaded)
     ghc-options: -threaded

executable png-haskell-example
  hs-source-dirs: src
  main-is: Main.hs
  extra-libraries: png
  build-depends: base >= 4.2 && < 5
  ghc-options: -Wall -O2
  if flag(threaded)
     ghc-options: -threaded
